--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 python:
  - "3.6"
 install:
-  - pip install -r requirements.txt
+ - pip install -r requirements.txt
 script:
-  - python tests.py
+ - python tests.py
+after_success:
+ - codecov
